[tool.poetry]
name = "5gals"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.25.1"
asyncio = "*"
async_timeout = "*"
aiohttp = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
